--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   Is this JavaScript?
     actuall, it's HTML!bjkguyrtyj
   
-    ok intlasting
+    ok intlasting i cant see the image!!
+    
   </body>
 </html>
