--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <span class="social_link footer_ele r">
           <a class="link ic_facebook" style="background-image:url(//res.wx.qq.com/a/wx_fed/wechat_portal/res/static/widget/footer_new/static/ic_facebook_72c7a69.png);" href="https://www.facebook.com/wechatapp"></a>
 
-          <a class="link ic_twitter" style="background-image:url(//res.wx.qq.com/a/wx_fed/wechat_portal/res/static/widget/footer_new/static/ic_twitter_a4f7af2.png);" href="https://twitter.com/#!/wechatappwotemehaishijingbuq"></a>
+          <a class="link ic_twitter" style="background-image:url(//res.wx.qq.com/a/wx_fed/wechat_portal/res/static/widget/footer_new/static/ic_twitter_a4f7af2.png);" href="https://twitter.com/#!/wechatappwotemehaishijingbuqua
+          "></a>
 
         </span>
 
